fix mobile overflow

--- a/assets/css/_base.css
+++ b/assets/css/_base.css
@@ -2,11 +2,12 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 *:focus {
-  -webkit-tap-highlight-color: transparent;
   background-color: transparent;
+  outline: none;
 }
 
 *::selection {
